updated service page

--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
       <li class="nav-item m-2">     </li>
       <li class="nav-item m-3"><a href="#home" style="text-decoration: none; color: #2d92a9">Home</a></li>
       <li class="nav-item m-3"><a href="#Economi" style="text-decoration: none; color: #2d92a9">Economi Car Rentals</a></li>
-      <li class="nav-item m-3"><a href="#footer" style="text-decoration: none; color: #2d92a9">About us</a></li>
+      <li class="nav-item m-3"><a href="/services.html" style="text-decoration: none; color: #2d92a9">Tours N packages</a></li>
       <li class="nav-item m-3"><a href="#footer" style="text-decoration: none; color: #2d92a9">Contact us</a></li>
-
     </ul>
   </div>
 </nav>
@@ -48,7 +47,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Book an Appointment</h1>
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Enquire Now</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -60,18 +59,22 @@
                 <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
                 <div class="mc-field-group"><label for="mce-LNAME">Name <span class="asterisk">*</span></label><input type="text" name="LNAME" class="required text" id="mce-LNAME" value="" required=""></div>
                 <div class="mc-field-group"><label for="mce-PHONE">Phone Number <span class="asterisk">*</span></label><input type="text" name="PHONE" class="REQ_CSS" id="mce-PHONE" required="" value=""></div>
-                <div class="mc-field-group size2of2"><label for="mce-FNAME">Branch<span class="asterisk">*</span> </label>
+                <div class="mc-field-group size2of2"><label for="mce-FNAME">Car<span class="asterisk">*</span> </label>
                   <!-- <input type="text" name="FNAME" class=" text" id="mce-FNAME" value=""> -->
                   <select class="form-select ps-2" type="text" name="FNAME"  id="mce-FNAME" required="">
-                    <option selected>Select branch here</option>
-                    <option value="Chanda nagar, Hyd">Chanda nagar, Hyd</option>
-                    <option value="Dhone">Dhone</option>
-                    <option value="Yemmiganur">Yemmiganur</option>
-                    <option value="Betamcherla">Betamcherla</option>
+                    <option selected>Select a car here</option>
+                    <option value="Swift(2015) Black">Swift Black</option>
+                    <option value="Swift Dzire(2019)">Swift Dzire</option>
+                    <option value="Innova Crysta">Innova Crysta</option>
+                    <option value="Ford Ecosport">Ford Ecosport</option>
+                    <option value="Ford Ecosport">Innova</option>
                   </select>
                 </div>
-                <div class="mc-field-group"><label for="mce-VTIME">Date of Visit </label>
+                <div class="mc-field-group size1of2"><label for="mce-VTIME">Start Date</label>
                   <input type="datetime-local" name="VTIME" class=" text" id="mce-VTIME" value="">
+                </div>
+                <div class="mc-field-group size1of2"><label for="mce1-VTIME">End Date</label>
+                  <input type="datetime-local" name="VTIME" class=" text" id="mce1-VTIME" value="">
                 </div>
                   <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                 </div>
@@ -324,12 +327,12 @@
               </div>            
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+          <button class="carousel-control-prev prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <button class="carousel-control-next next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+            <span class="carousel-control-next-icon " aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
         </div>
@@ -350,10 +353,9 @@
       <div class="col-md-6">
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
           <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-primary">Tirumala-Tirupati</strong>
-            <h3 class="mb-0">Devotional</h3>
-            <div class="mb-1 text-muted">Nov 12</div>
-            <p class="card-text mb-auto">Tirumala darshan is a spiritual pilgrimage to the sacred hill of Tirumala, known for its iconic Venkateswara Temple. Devotees seek blessings, climb stairs, and wait in long queues for a glimpse of the deity. </p>
+            <strong class="d-inline-block mb-2 text-primary">Tirupathi VIP Package</strong>
+            <p class="card-text mb-auto">Balaji darshan, and padmavathi temple sight seeing, Room for Freshening up &amp; 2 Laddu Prasadam, V.I.P Darshan ticket, Breakfast &amp; Lunch All including.&amp; </p>
+            <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
             <img src="./images/tirumala.webp" width="200" height="250" role="img" style="object-fit:cover;" aria-label="Placeholder: Thumbnail" focusable="false" alt="Tirumala-pic">
@@ -364,13 +366,13 @@
       <div class="col-md-6">
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
           <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-primary">Tirumala-Tirupati</strong>
-            <h3 class="mb-0">Devotional</h3>
-            <div class="mb-1 text-muted">Nov 12</div>
-            <p class="card-text mb-auto">Tirumala darshan is a spiritual pilgrimage to the sacred hill of Tirumala, known for its iconic Venkateswara Temple. Devotees seek blessings, climb stairs, and wait in long queues for a glimpse of the deity. </p>
+            <strong class="d-inline-block mb-2 text-primary">TOUR 1 : MYSORE - OOTY : 1 Night - 2 Days</strong>
+            <p class="card-text mb-auto"><Strong>Day 1 :</Strong>SriRangapatna - Sri Ranganatha Swamy Temple, Tippu's Palace, Gumbaz.
+              Mysore - Chamundi Hills, Maharaja Palace, St. Philomina Church & BrindavanGarden (with musical fountain)   (Night Stay)</p>
+            <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="./images/tirumala.webp" width="200" height="250" role="img" style="object-fit:cover;" aria-label="Placeholder: Thumbnail" focusable="false" alt="Tirumala-pic">
+            <img src="./images/OOTYwebp.webp" width="200" height="250" role="img" style="object-fit:cover;" aria-label="Placeholder: Thumbnail" focusable="false" alt="Tirumala-pic">
           </div>
         </div>
       </div>
@@ -378,13 +380,12 @@
       <div class="col-md-6">
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
           <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-primary">Tirumala-Tirupati</strong>
-            <h3 class="mb-0">Devotional</h3>
-            <div class="mb-1 text-muted">Nov 12</div>
+            <strong class="d-inline-block mb-2 text-primary">TOUR 2 : TIRUPATI - GANDIKOTA : 1 Night</strong>
             <p class="card-text mb-auto">Tirumala darshan is a spiritual pilgrimage to the sacred hill of Tirumala, known for its iconic Venkateswara Temple. Devotees seek blessings, climb stairs, and wait in long queues for a glimpse of the deity. </p>
+            <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="./images/tirumala.webp" width="200" height="250" role="img" style="object-fit:cover;" aria-label="Placeholder: Thumbnail" focusable="false" alt="Tirumala-pic">
+            <img src="./images/Gandikota.jpg" width="200" height="250" role="img" style="object-fit:cover;" aria-label="Placeholder: Thumbnail" focusable="false" alt="Tirumala-pic">
           </div>
         </div>
       </div>
@@ -392,13 +393,12 @@
       <div class="col-md-6">
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
           <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-primary">Tirumala-Tirupati</strong>
-            <h3 class="mb-0">Devotional</h3>
-            <div class="mb-1 text-muted">Nov 12</div>
-            <p class="card-text mb-auto">Tirumala darshan is a spiritual pilgrimage to the sacred hill of Tirumala, known for its iconic Venkateswara Temple. Devotees seek blessings, climb stairs, and wait in long queues for a glimpse of the deity. </p>
+            <strong class="d-inline-block mb-2 text-primary">TOUR 2 : TIRUPATI - THALAKONA : 1 Night</strong>
+            <p class="card-text mb-auto">Talakona is a resort with waterfalls, dense forests and wildlife. The area was declared a biosphere reserve in 1989 due to the presence of rich variety of flora</p>
+            <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="./images/tirumala.webp" width="200" height="250" role="img" style="object-fit:cover;" aria-label="Placeholder: Thumbnail" focusable="false" alt="Tirumala-pic">
+            <img src="./images/talakona.jpg" width="200" height="250" role="img" style="object-fit:cover;" aria-label="Placeholder: Thumbnail" focusable="false" alt="Tirumala-pic">
           </div>
         </div>
       </div>
@@ -406,13 +406,12 @@
       <div class="col-md-6">
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
           <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-primary">Tirumala-Tirupati</strong>
-            <h3 class="mb-0">Devotional</h3>
-            <div class="mb-1 text-muted">Nov 12</div>
-            <p class="card-text mb-auto">Tirumala darshan is a spiritual pilgrimage to the sacred hill of Tirumala, known for its iconic Venkateswara Temple. Devotees seek blessings, climb stairs, and wait in long queues for a glimpse of the deity. </p>
+            <strong class="d-inline-block mb-2 text-primary">TOUR 3 : TIRUPATI - NARAYANAVANAM : 1 Night</strong>
+            <p class="card-text mb-auto">Narayanavanam is a census town in Tirupati district of the Indian state of Andhra Pradesh. It is the headquarters of Narayanavanam mandal in Sri Kalahasti revenue division. The town is known for Kalyana Venkateswara Temple.</p>
+            <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="./images/tirumala.webp" width="200" height="250" role="img" style="object-fit:cover;" aria-label="Placeholder: Thumbnail" focusable="false" alt="Tirumala-pic">
+            <img src="./images/narayanavanam.jpg" width="200" height="250" role="img" style="object-fit:cover;" aria-label="Placeholder: Thumbnail" focusable="false" alt="Tirumala-pic">
           </div>
         </div>
       </div>
@@ -440,26 +439,18 @@
 <footer id="footer">
   <div class="container-fluid foot">
     <div class="row">
-      <div class="col-lg-3 col-md-6">
+      <div class="col-lg-4 col-md-6">
         <img width="200" class="logoBottom" src="./images/logos/slv_h_white.png" alt="">
       </div>
-      <div class="col-lg-3 col-md-6">
+      <div class="col-lg-4 col-md-6">
         <p style="color:white;">Phone: <br>+91-810-699-3719<br>+91-903-217-5766<br>+91-891-967-1223</p>
       </div>
-      <div class="col-lg-3 col-md-6">
-        <p style="color:white;">locate us in maps 👇</p>
-        <p style="color:white;">
-          <a target="_blank" href="https://maps.app.goo.gl/xgFCZU7zwxMPy8ZGA" style="text-decoration: none; color: #ffd625;">Chandanagar</a> | 
-          <a target="_blank" href="https://maps.app.goo.gl/xgFCZU7zwxMPy8ZGA" style="text-decoration: none; color: #ffd625;">Dhone</a> | 
-          <a target="_blank" href="https://maps.app.goo.gl/xgFCZU7zwxMPy8ZGA" style="text-decoration: none; color: #ffd625;">Yemmiganur</a> | 
-          <a target="_blank" href="https://maps.app.goo.gl/owmrvaru8imsCcTi9" style="text-decoration: none; color: #ffd625;">Betamcherla</a>
-        </p>
-      </div>
-      <div class="col-lg-3 col-md-6">
-        <a href="./services.html" style="text-decoration: none;"><p style="color:white;">Treatments we do</p></a> 
+      <div class="col-lg-4 col-md-6">
+        <p style="color:white;">locate us in maps 👉🏼 &nbsp;<a target="_blank" href="https://maps.app.goo.gl/xgFCZU7zwxMPy8ZGA" style="text-decoration: none; color: #ffd625;">Tirupati</a></p>         
+        <a href="./services.html" style="text-decoration: none;"><p style="color:white;">Packages we offer</p></a> 
         <i class="fa-xl px-1 fa-brands fa-facebook white"></i>
         <i class="fa-xl px-1 fa-solid fa-envelope"></i>
-        <i class="fa-xl px-1 fa-brands fa-square-instagram"></i>        
+        <i class="fa-xl px-1 fa-brands fa-square-instagram"></i> 
       </div>
 
     </div>
@@ -499,6 +490,8 @@
       document.getElementById("mce-EMAIL").value=email;
       document.getElementById("userMail").value="";
       document.getElementById("mce-VTIME").value=setDate();
+      document.getElementById("mce1-VTIME").value=setDate();
+
     }
     function copylocation(e){
       let locate = e;
@@ -515,6 +508,8 @@
             break;
         };
         document.getElementById("mce-VTIME").value=setDate();
+        document.getElementById("mce1-VTIME").value=setDate();
+
     }
     
   </script>
