--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <li class="nav-item m-2">     </li>
       <li class="nav-item m-3"><a href="#home" style="text-decoration: none; color: #2d92a9">Home</a></li>
       <li class="nav-item m-3"><a href="#Economi" style="text-decoration: none; color: #2d92a9">Economi Car Rentals</a></li>
-      <li class="nav-item m-3"><a href="/services.html" style="text-decoration: none; color: #2d92a9">Tours N packages</a></li>
+      <li class="nav-item m-3"><a href="./services.html" style="text-decoration: none; color: #2d92a9">Tours N packages</a></li>
       <li class="nav-item m-3"><a href="#footer" style="text-decoration: none; color: #2d92a9">Contact us</a></li>
     </ul>
   </div>
@@ -107,7 +107,7 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./images/jumbo1.jpg" class="d-block w-100" style="object-fit: cover;" height="550rem" alt="...">
+          <img src="./images/jumbo1.jpeg" class="d-block w-100" style="object-fit: cover;" height="550rem" alt="...">
           <div class="hero">
             <div class="content-over">
               <h1 class="text-white">CARS AVAILABLE FOR OUTSTATION</h1>
@@ -118,7 +118,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./images/jumbo2.jpg" class="d-block w-100" style="object-fit: cover;" height="550rem" alt="...">
+          <img src="./images/jumbo4.jpg" class="d-block w-100" style="object-fit: cover;" height="550rem" alt="...">
           <div class="hero">
             <div class="content-over">
               <h1 class="text-white">WE PROVIDE AIRPORT</h1>
@@ -129,7 +129,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./images/jumbo3.jpg" class="d-block w-100" style="object-fit: cover;" height="550rem" alt="...">
+          <img src="./images/jumbo2.jpeg" class="d-block w-100" style="object-fit: cover;" height="550rem" alt="...">
           <div class="hero">
             <div class="content-over">
               <h1 class="text-white">Most Trusted & Profesional</h1>
