--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Amigo dental clinic</title>
+  <title>SLV Tours & Travels</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 
@@ -42,9 +42,9 @@
     <div class="collapse navbar-collapse" id="n_bar">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item m-2">     </li>
-        <li class="nav-item m-3"><a href="/index.html" style="text-decoration: none; color: #2d92a9">Home</a></li>
-        <li class="nav-item m-3"><a href="/index.html#Economi" style="text-decoration: none; color: #2d92a9">Economi Car Rentals</a></li>
-        <li class="nav-item m-3"><a href="/services.html" style="text-decoration: none; color: #2d92a9">Tours N packages</a></li>
+        <li class="nav-item m-3"><a href="./index.html" style="text-decoration: none; color: #2d92a9">Home</a></li>
+        <li class="nav-item m-3"><a href="./index.html#Economi" style="text-decoration: none; color: #2d92a9">Economi Car Rentals</a></li>
+        <li class="nav-item m-3"><a href="./services.html" style="text-decoration: none; color: #2d92a9">Tours N packages</a></li>
         <li class="nav-item m-3"><a href="#footer" style="text-decoration: none; color: #2d92a9">Contact us</a></li>
       </ul>
     </div>
@@ -125,58 +125,37 @@
           <h4 class="m-3">Packages we offer</h4>
         </div>
       </div>
-
-      <div class="row">
-  
-        <div class="col-xl-3 col-sm-6 mt-3 col-12"> 
-          <div class="card bg-dark text-white">
-            <img src="./images/treatments/TeethCleaning.jpeg" class="card-img cardImage" alt="...">
-            <div class="card-img-overlay">
-              <p class="card-text text-white strong">Teeth Cleaning & Polishing Teeth Cleaning / Scaling</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-3 col-sm-6 mt-3 col-12"> 
-          <div class="card bg-dark text-white">
-            <img src="./images/treatments/rootcanal.jpeg" class="card-img cardImage" alt="...">
-            <div class="card-img-overlay">
-              <p class="card-text text-white strong">Root Canal Treatment (RCT)</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-3 col-sm-6 mt-3 col-12"> 
-          <div class="card bg-dark text-white">
-            <img src="./images/treatments/dentalImplants.jpg" class="card-img cardImage" alt="...">
-            <div class="card-img-overlay">
-              <p class="card-text text-white strong">Dental Implant</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-3 col-sm-6 mt-3 col-12"> 
-          <div class="card bg-dark text-white">
-            <img src="./images/treatments/CrownValue.png" class="card-img cardImage" alt="...">
-            <div class="card-img-overlay">
-              <p class="card-text text-white strong">Crown – Value (Full Ceramic - Zirconia)</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-3 col-sm-6 mt-3 col-12"> 
-          <div class="card bg-dark text-white">
-            <img src="./images/treatments/metalBraces.jpg" class="card-img cardImage" alt="...">
-            <div class="card-img-overlay">
-              <p class="card-text text-white strong">Metal Braces (Consultant) / Ceramic Braces (Consultant)</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-3 col-sm-6 mt-3 col-12"> 
-          <div class="card bg-dark text-white">
-            <img src="./images/treatments/SDAlign.jpg" class="card-img cardImage" alt="...">
-            <div class="card-img-overlay">
-              <p class="card-text text-white strong">SDAlign (Invisible Braces or Clear Aligners)</p>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="table-responsive">
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Handle</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td colspan="2">Larry the Bird</td>
+            <td>@twitter</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
     </section>
     
   </div>
